Fixed user shift cancel + update dashboard + todo

--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -29,7 +29,8 @@ body {
 	flex-direction: column;
 	align-items: start;
 	margin: 10vh auto;
-	max-width: 1000px;
+	padding: 0 2rem;
+	max-width: 1300px;
 	gap: 2rem;
 }
 
@@ -73,20 +74,22 @@ i {
 .shift-list {
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	gap: 0.5rem;
 }
 
 .shift {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 	background-color: var(--white);
-	border: 1px solid var(--light-gray);
+	border: 1px solid var(--gray);
 	padding: 0.75rem 1rem;
 	border-radius: 6px;
+	gap: 1rem;
 }
 
 .shift-header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	flex: 1;
 }
 
 .shift-header h4 {
@@ -116,11 +119,10 @@ i {
 .shift-signup-btn {
 	background-color: var(--purple);
 	color: var(--white);
-	padding: 14px;
+	padding: 8px;
 	border: none;
 	border-radius: 6px;
-	width: 100%;
-	font-size: 16px;
+	font-size: 14px;
 	font-family: 'Raleway', sans-serif;
 	font-weight: bold;
 	cursor: pointer;
